добавил /api/v1/application/roles:
